fix tests; ci: remove unnecessary libs